[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/art/stars.png" type="Texture" id=2]
[ext_resource path="res://assets/art/clouds.png" type="Texture" id=3]
[ext_resource path="res://assets/themes/theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/font/doppio-one.regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://spriteFrames/platform.tres" type="SpriteFrames" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.380392, 0.576471, 0.917647, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("clouds:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 720 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("stars:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "light-dark-light"
length = 60.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15, 30, 35, 45, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.380392, 0.576471, 0.917647, 1 ), Color( 0.537255, 0.215686, 0.0745098, 1 ), Color( 0.0627451, 0.0901961, 0.133333, 1 ), Color( 0.0627451, 0.0901961, 0.133333, 1 ), Color( 0.784314, 0.376471, 0.156863, 1 ), Color( 0.380392, 0.576471, 0.917647, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("clouds:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 30, 35, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 720 ), Vector2( 0, 720 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("stars:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5, 30, 35, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 720 ), Vector2( 0, 720 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 720 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 45
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
color = Color( 0.380392, 0.576471, 0.917647, 1 )

[node name="nightDay" type="AnimationPlayer" parent="."]
autoplay = "light-dark-light"
anims/RESET = SubResource( 1 )
anims/light-dark-light = SubResource( 2 )

[node name="stars" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="clouds" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.647059 )
position = Vector2( 0, 720 )
texture = ExtResource( 3 )
centered = false

[node name="platform" type="AnimatedSprite" parent="."]
position = Vector2( 241, 274 )
scale = Vector2( 4.125, 4.125 )
frames = ExtResource( 6 )
playing = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_top = 75.0
margin_right = 480.0
margin_bottom = 191.0
theme = ExtResource( 4 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][shake level = 10]Rocket[/shake][wave level = 10] 
Hamster[/wave][/center]"
text = "Rocket 
Hamster"

[node name="play" type="Button" parent="."]
margin_left = 165.0
margin_top = 300.0
margin_right = 300.0
margin_bottom = 377.0
focus_mode = 0
theme = ExtResource( 4 )
custom_colors/font_color_hover = Color( 0.521569, 0.521569, 0.521569, 1 )
custom_colors/font_color_pressed = Color( 0.329412, 0.329412, 0.329412, 1 )
enabled_focus_mode = 0
text = "Play"
flat = true

[node name="settings" type="Button" parent="."]
margin_left = 165.0
margin_top = 400.0
margin_right = 300.0
margin_bottom = 477.0
focus_mode = 0
theme = ExtResource( 4 )
custom_colors/font_color_hover = Color( 0.521569, 0.521569, 0.521569, 1 )
custom_colors/font_color_pressed = Color( 0.329412, 0.329412, 0.329412, 1 )
enabled_focus_mode = 0
text = "Settings"
flat = true

[node name="exit" type="Button" parent="."]
margin_left = 165.0
margin_top = 500.0
margin_right = 300.0
margin_bottom = 577.0
focus_mode = 0
theme = ExtResource( 4 )
custom_colors/font_color_hover = Color( 0.521569, 0.521569, 0.521569, 1 )
custom_colors/font_color_pressed = Color( 0.329412, 0.329412, 0.329412, 1 )
enabled_focus_mode = 0
text = "Quit"
flat = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 240, 360 )
current = true

[connection signal="animation_finished" from="nightDay" to="." method="onFinished"]
[connection signal="pressed" from="play" to="." method="_onPlay"]
[connection signal="pressed" from="settings" to="." method="_onSettings"]
[connection signal="pressed" from="exit" to="." method="_onExit"]
